--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-web": "0.17.1",
+    "react-test-renderer": "^17.0.2",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
@@ -26,10 +27,14 @@
     "@types/jest": "^27.0.2",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.15",
     "@types/styled-components-react-native": "^5.1.3",
     "jest-expo": "^43.0.1",
     "typescript": "~4.3.5"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "private": true
 }
