--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~43.0.2",
-    "expo-constants": "~12.1.3",
-    "expo-linear-gradient": "~10.0.3",
-    "expo-status-bar": "~1.1.0",
+    "expo": "^44.0.5",
+    "expo-constants": "~13.0.0",
+    "expo-linear-gradient": "~11.0.0",
+    "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -24,15 +24,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@testing-library/react-native": "^8.0.0",
-    "@types/jest": "^27.0.2",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
+    "@testing-library/react-native": "^9.0.0",
+    "@types/jest": "^27.4.0",
+    "@types/react": "^17.0.38",
+    "@types/react-native": "^0.66.12",
     "@types/react-test-renderer": "^17.0.1",
-    "@types/styled-components": "^5.1.15",
+    "@types/styled-components": "^5.1.20",
     "@types/styled-components-react-native": "^5.1.3",
-    "jest-expo": "^43.0.1",
-    "typescript": "~4.3.5"
+    "jest-expo": "^44.0.1",
+    "typescript": "^4.5.4"
   },
   "jest": {
     "preset": "jest-expo"
