--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "start": "expo start",
     "test": "jest",
+    "test:e2e": "detox test --configuration ios.sim",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "expo": "^44.0.5",
@@ -23,19 +25,43 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.16.7",
     "@testing-library/react-native": "^9.0.0",
+    "@types/detox": "^18.1.0",
+    "@types/jasmine": "^3.10.3",
     "@types/jest": "^27.4.0",
     "@types/react": "^17.0.38",
     "@types/react-native": "^0.66.12",
     "@types/react-test-renderer": "^17.0.1",
     "@types/styled-components": "^5.1.20",
     "@types/styled-components-react-native": "^5.1.3",
+    "detox": "^19.4.2",
+    "detox-expo-helpers": "^0.6.0",
+    "expo-detox-hook": "^1.0.10",
+    "jasmine": "^4.0.2",
+    "jest": "^27.4.7",
     "jest-expo": "^44.0.1",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.5.4"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "testPathIgnorePatterns": [
+      "<rootDir>/e2e/",
+      "<rootDir>/node_modules/"
+    ]
+  },
+  "detox": {
+    "test-runner": "jest",
+    "configurations": {
+      "ios.sim": {
+        "binaryPath": "bin/Exponent.app",
+        "type": "ios.simulator",
+        "name": "iPhone 12 Pro"
+      }
+    }
   },
   "private": true
 }
